Fix table shading in dark mode for deleted/inactive rows

--- a/src/WebApp/wwwroot/css/site.css
+++ b/src/WebApp/wwwroot/css/site.css
@@ -103,6 +103,11 @@
     box-shadow: 0 0 0 .25rem hsla(var(--base-hue), 10%, 100%, .57);
 }
 
+/* Dark mode fix for table rows with "secondary" background color */
+.table > :not(caption) > .bg-secondary-subtle > * {
+    background-color: var(--bs-secondary-bg-subtle) !important;
+}
+
 /* Adjust font sizing
 -------------------------------------------------- */
 html {
